# noted-secure-note-taking

./: .gitignore  LICENCE  LICENSE  README.md  main.py  main.spec  notas.json  pyproject.toml  requirements.txt  terminal.py
.github/workflows/: ci-pipeline.yml
Backup/: backup.json
files/: notas-backup.db  notes.db
src/: app.py  log.txt  log_function.py  login.py  main.py  notas.db  password.json  verifier.py
src/dashboard/: dashboard.py  editor.py  frame_manager.py  header.py  notes_frame.py
src/dashboard/footer/: footer.py  new_button.py  next_button.py  prev_button.py
src/functions/: delete_note.py  files.py
src/managers/: cipher.py  database_manager.py  password_manager.py
src/managers/database/: database_manager.py
src/managers/encryption/: cipher.py
src/managers/new_password/: new_password_gui.py
src/managers/password/: key_manager.py  new_password_gui.py  password_manager.py
src/mediator/: app_mediator.py  database_mediator.py  mediator.py
src/models/: note_models.py
src/notes/: notes.py
src/ui/: app.py  dashboard.py  editor.py  frame_manager.py  header.py  login.py  notes.py  notes_frame.py
src/ui/dashboard/: dashboard.py  editor.py  header.py
src/ui/dashboard/footer/: footer.py  new_button.py  next_button.py  prev_button.py
src/ui/dashboard/notes/: frame_manager.py  notes.py  notes_frame.py
src/ui/footer/: footer.py  new_button.py  next_button.py  prev_button.py
src/ui/menu/: functs.py  menu.py  register.py
src/ui/menu/functions/: __init__.py  (+1 more)
test/: test_cipher.py  test_database_manager.py  test_password_manager.py
