[project]
name = "noted"
version = "0.1.0"
description = "A modern, user-friendly, and secure note-taking application designed to protect your privacy."
authors = [
    {name = "Edplayer0",email = "edgarayusodev@proton.me"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14,<3.15"
package-mode = false

dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
build = [
    "pyinstaller (==6.16.0)"
]
